--- a/05-cds/cds.ipynb
+++ b/05-cds/cds.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_file ='../image/cat1.png'"
+    "img_file = \"cat1.png\""
    ]
   },
   {
